@@ -831,49 +831,6 @@ gtk_file_selection_init (GtkFileSelection *filesel)
   gtk_widget_pop_composite_child ();
 }
 
-static gchar *
-uri_list_extract_first_uri (const gchar* uri_list)
-{
-  const gchar *p, *q;
-  
-  g_return_val_if_fail (uri_list != NULL, NULL);
-  
-  p = uri_list;
-  /* We don't actually try to validate the URI according to RFC
-   * 2396, or even check for allowed characters - we just ignore
-   * comments and trim whitespace off the ends.  We also
-   * allow LF delimination as well as the specified CRLF.
-   *
-   * We do allow comments like specified in RFC 2483.
-   */
-  while (p)
-    {
-      if (*p != '#')
-	{
-	  while (g_ascii_isspace(*p))
-	    p++;
-	  
-	  q = p;
-	  while (*q && (*q != '\n') && (*q != '\r'))
-	    q++;
-	  
-	  if (q > p)
-	    {
-	      q--;
-	      while (q > p && g_ascii_isspace (*q))
-		q--;
-
-	      if (q > p)
-		return g_strndup (p, q - p + 1);
-	    }
-	}
-      p = strchr (p, '\n');
-      if (p)
-	p++;
-    }
-  return NULL;
-}
-
 static void
 dnd_really_drop  (GtkWidget *dialog, gint response_id, GtkFileSelection *fs)
 {
@@ -889,7 +846,6 @@ dnd_really_drop  (GtkWidget *dialog, gint response_id, GtkFileSelection *fs)
   gtk_widget_destroy (dialog);
 }
 
-
 static void
 filenames_dropped (GtkWidget        *widget,
 		   GdkDragContext   *context,
@@ -899,22 +855,21 @@ filenames_dropped (GtkWidget        *widget,
 		   guint             info,
 		   guint             time)
 {
-  char *uri = NULL;
+  char **uris = NULL;
   char *filename = NULL;
   char *hostname;
   const char *this_hostname;
   GError *error = NULL;
-	
-  if (!selection_data->data)
-    return;
 
-  uri = uri_list_extract_first_uri ((char *)selection_data->data);
-  
-  if (!uri)
-    return;
+  uris = gtk_selection_data_get_uris (selection_data);
+  if (!uris || !uris[0])
+    {
+      g_strfreev (uris);
+      return;
+    }
 
-  filename = g_filename_from_uri (uri, &hostname, &error);
-  g_free (uri);
+  filename = g_filename_from_uri (uris[0], &hostname, &error);
+  g_strfreev (uris);
   
   if (!filename)
     {
@@ -963,16 +918,6 @@ filenames_dropped (GtkWidget        *widget,
   g_free (filename);
 }
 
-enum
-{
-  TARGET_URILIST,
-  TARGET_UTF8_STRING,
-  TARGET_STRING,
-  TARGET_TEXT,
-  TARGET_COMPOUND_TEXT
-};
-
-
 static void
 filenames_drag_get (GtkWidget        *widget,
 		    GdkDragContext   *context,
@@ -982,64 +927,57 @@ filenames_drag_get (GtkWidget        *widget,
 		    GtkFileSelection *filesel)
 {
   const gchar *file;
-  gchar *uri_list;
-  const char *hostname;
-  GError *error;
+  gchar *filename_utf8;
 
   file = gtk_file_selection_get_filename (filesel);
+  if (!file)
+    return;
 
-  if (file)
+  if (gtk_targets_include_uri (&selection_data->target, 1))
     {
-      if (info == TARGET_URILIST)
-	{
-	  hostname = g_get_host_name ();
+      gchar *file_uri;
+      const char *hostname;
+      GError *error;
+      char *uris[2];
+
+      hostname = g_get_host_name ();
+
+      error = NULL;
+      file_uri = g_filename_to_uri (file, hostname, &error);
+      if (!file_uri)
+        {
+          g_warning ("Error getting filename: %s\n",
+                      error->message);
+          g_error_free (error);
+          return;
+        }
 	  
-	  error = NULL;
-	  uri_list = g_filename_to_uri (file, hostname, &error);
-	  if (!uri_list)
-	    {
-	      g_warning ("Error getting filename: %s\n",
-			 error->message);
-	      g_error_free (error);
-	      return;
-	    }
-	  
-	  gtk_selection_data_set (selection_data,
-				  selection_data->target, 8,
-				  (void *)uri_list, strlen((char *)uri_list));
-	  g_free (uri_list);
-	}
-      else
-	{
-	  gchar *filename_utf8 = g_filename_to_utf8 (file, -1, NULL, NULL, NULL);
-	  g_assert (filename_utf8);
-	  gtk_selection_data_set_text (selection_data, filename_utf8, -1);
-	  g_free (filename_utf8);
-	}
+      uris[0] = file_uri;
+      uris[1] = NULL;
+      gtk_selection_data_set_uris (selection_data, uris);
+      g_free (file_uri);
+
+      return;
     }
+	  
+  filename_utf8 = g_filename_to_utf8 (file, -1, NULL, NULL, NULL);
+  if (!filename_utf8)
+    return;
+
+  gtk_selection_data_set_text (selection_data, filename_utf8, -1);
+  g_free (filename_utf8);
 }
 
 static void
 file_selection_setup_dnd (GtkFileSelection *filesel)
 {
   GtkWidget *eventbox;
-  static const GtkTargetEntry drop_types[] = {
-    { "text/uri-list", 0, TARGET_URILIST}
-  };
-  static const gint n_drop_types = sizeof(drop_types)/sizeof(drop_types[0]);
-  static const GtkTargetEntry drag_types[] = {
-    { "text/uri-list", 0, TARGET_URILIST},
-    { "UTF8_STRING", 0, TARGET_UTF8_STRING },
-    { "STRING", 0, 0 },
-    { "TEXT",   0, 0 }, 
-    { "COMPOUND_TEXT", 0, 0 }
-  };
-  static const gint n_drag_types = sizeof(drag_types)/sizeof(drag_types[0]);
 
   gtk_drag_dest_set (GTK_WIDGET (filesel),
 		     GTK_DEST_DEFAULT_ALL,
-		     drop_types, n_drop_types,
+		     NULL, 0,
 		     GDK_ACTION_COPY);
+  gtk_drag_dest_add_uri_targets (GTK_WIDGET (filesel));
 
   g_signal_connect (filesel, "drag_data_received",
 		    G_CALLBACK (filenames_dropped), NULL);
@@ -1047,8 +985,10 @@ file_selection_setup_dnd (GtkFileSelection *filesel)
   eventbox = gtk_widget_get_parent (filesel->selection_text);
   gtk_drag_source_set (eventbox,
 		       GDK_BUTTON1_MASK,
-		       drag_types, n_drag_types,
+		       NULL, 0,
 		       GDK_ACTION_COPY);
+  gtk_drag_source_add_uri_targets (eventbox);
+  gtk_drag_source_add_text_targets (eventbox);
 
   g_signal_connect (eventbox, "drag_data_get",
 		    G_CALLBACK (filenames_drag_get), filesel);
